--- a/src/main/resources/templates/project_collaborators.html
+++ b/src/main/resources/templates/project_collaborators.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>InstaTeam</title>
         <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/site.css">
+        <link rel="stylesheet" th:href="@{/css/normalize.css}">
+        <link rel="stylesheet" th:href="@{/css/site.css}">
     </head>
     <body>
         <header>
             <div class="container">
                 <div class="site-header">
-                    <a class="logo" href="index.html">InstaTeam</a>
+                    <a class="logo" th:href="@{/index}">InstaTeam</a>
                     <a class="new-project button icon-left" href="#"><i class="material-icons">add</i> New Project</a>
                 </div>
             </div>
         </header>
         <nav>
             <ul>
-                <li class="selected"><a href="index.html">Projects</a></li>
-                <li><a href="collaborators.html">Collaborators</a></li>
-                <li><a href="roles.html">Roles</a></li>
+                <li class="selected"><a th:href="@{/index}">Projects</a></li>
+                <li><a th:href="@{/collaborators}">Collaborators</a></li>
+                <li><a th:href="@{/roles}">Roles</a></li>
             </ul>
         </nav>
         <section>
             <div class="container wrapper">
-                <form>
+                <form th:action="@{/edit_collaborators/${project.id}}" method="post">
                     <label>Edit Collaborators: Website Project</label>
                     <ul class="checkbox-list">
-                        <li><span class="primary">Developer</span>
+                        <li th:each="role : ${project.rolesNeeded}" th:with="roleId=${role.id.toString()}"><span class="primary" th:text="${role.name}">Developer</span>
                             <div class="custom-select">
                                 <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Michael Pemulis</option>
+                                <select name="projectCollaborators">
+                                    <option th:each="collaborator : (context.getVariable(roleId))" th:value="${collaborator.id}" th:text="${collaborator.name}">Michael Pemulis</option>
                                     <option value="#">Name</option>
                                 </select>
                             </div>
                         </li>
-                        <li><span class="primary">Designer</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Don Gately</option>
-                                    <option value="#">Name</option>
-                                </select>
-                            </div>
-                        </li>
-                        <li><span class="primary">QA</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Joelle Van Dyne</option>
-                                    <option value="#">Name</option>
-                                </select>
-                            </div>
-                        </li>
-                        <li><span class="primary">DevOps</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Choose...</option>
-                                    <option value="#">Name</option>
-                                </select>
-                            </div>
-                        </li>
+                        <!--<li><span class="primary">Designer</span>-->
+                            <!--<div class="custom-select">-->
+                                <!--<span class="dropdown-arrow"></span>-->
+                                <!--<select>-->
+                                    <!--<option value="#">Don Gately</option>-->
+                                    <!--<option value="#">Name</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
+                        <!--</li>-->
+                        <!--<li><span class="primary">QA</span>-->
+                            <!--<div class="custom-select">-->
+                                <!--<span class="dropdown-arrow"></span>-->
+                                <!--<select>-->
+                                    <!--<option value="#">Joelle Van Dyne</option>-->
+                                    <!--<option value="#">Name</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
+                        <!--</li>-->
+                        <!--<li><span class="primary">DevOps</span>-->
+                            <!--<div class="custom-select">-->
+                                <!--<span class="dropdown-arrow"></span>-->
+                                <!--<select>-->
+                                    <!--<option value="#">Choose...</option>-->
+                                    <!--<option value="#">Name</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
+                        <!--</li>-->
                     </ul>
                     <div class="actions">
                         <input type="submit" value="Save" class="button">
