--- a/src/main/resources/templates/project_detail.html
+++ b/src/main/resources/templates/project_detail.html
@@ -35,8 +35,8 @@
                     </div>
                     <div class="roles-collaborators">
                         <h3>Roles &amp; Collaborators</h3>
-                        <div class="list-item" th:each="role : ${roles}" th:each="collaborator : ${collaborators}">
-                            <span class="primary" th:text="${role.name}">Developer</span>
+                        <div class="list-item" th:each="collaborator : ${collaborators}">
+                            <span class="primary" th:text="${collaborator.role.name}">Developer</span>
                             <span class="secondary" th:text="${collaborator.name}">Michael Pemulis</span>
                         </div>
                         <!--<div class="list-item">-->
