--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -27,21 +27,22 @@
         </nav>
         <section>
             <div class="container wrapper">
-                <form th:action="@{/addcollaborator}" method="post" th:object="${collaborator}" id="addcollaborator">
-                    <input type="hidden" th:field="*{id}"/>
+                <form th:action="@{/update-collaborator-role}" method="post">
                     <h2>Manage Collaborators</h2>
                     <ul class="checkbox-list">
                         <li th:each="collaborator : ${collaborators}">
                             <span class="primary" th:text="${collaborator.name}">Michael Pemulius</span>
                             <div class="custom-select">
-                                <span><a th:href="@{|/formEditCollaborator/${collaborator.id}|}">Edit</a></span>
                                 <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option th:each="role : ${roles}" th:text="${role.name}" value="#" th:selected="${collaborator.role.id} == ${role.id}">Designer</option>
+                                <select onchange="this.form.submit()" name="collaboratorRole">
+                                    <option th:each="role : ${roles}"  th:text="${role.name}" th:value="@{|${collaborator.id},${role.id}|}" th:selected="${collaborator.role.id} == ${role.id}">Designer</option>
                                 </select>
                             </div>
                         </li>
                     </ul>
+                </form>
+                <form th:action="@{/addcollaborator}" method="post" th:object="${collaborator}" id="addcollaborator">
+                    <input type="hidden" th:field="*{id}"/>
                     <div class="actions add-new-collaborator">
                         <input type="text" placeholder="Name..." th:field="*{name}">
                         <div class="custom-select">
